# libgsjj

./: .gitignore  CMakeLists.txt  README.md  bug.in  example.in  exemple.in  names.in  neider.in  noms.in  tooSlow.in
benchmarks/: CMakeLists.txt  LFDFA.cpp  LFDFA.h  main.cpp
benchmarks/files/: randm04.02.02.01.020_0030.01.kis  randm04.02.02.01.020_0030.03.kis  randm04.02.02.01.020_0030.04.kis  randm04.02.02.01.020_0030.05.kis  randm04.02.02.02.020_0030.01.kis  randm04.02.02.02.020_0030.02.kis  randm04.02.02.02.020_0030.03.kis  randm04.02.02.03.020_0030.02.kis  randm04.02.02.03.020_0030.03.kis  randm04.02.02.04.020_0030.01.kis  randm04.02.02.04.020_0030.02.kis  randm04.02.02.05.020_0030.01.kis  randm04.02.02.05.020_0030.02.kis  randm04.02.02.05.020_0030.05.kis  randm04.02.02.06.020_0030.04.kis  randm04.02.02.06.020_0030.05.kis  randm04.02.02.08.020_0030.01.kis  randm04.02.02.08.020_0030.04.kis  randm04.02.02.09.020_0030.02.kis  randm04.02.02.09.020_0030.04.kis  randm05.02.02.01.020_0030.01.kis  randm05.02.02.01.020_0030.02.kis  randm05.02.02.01.020_0030.04.kis  randm05.02.02.02.020_0030.02.kis  randm05.02.02.02.020_0030.03.kis  randm05.02.02.03.020_0030.02.kis  randm05.02.02.03.020_0030.05.kis  randm05.02.02.04.020_0030.01.kis  randm05.02.02.04.020_0030.04.kis  randm05.02.02.04.020_0030.05.kis  randm05.02.02.05.020_0030.02.kis  randm05.02.02.05.020_0030.05.kis  randm05.02.02.06.020_0030.01.kis  randm05.02.02.06.020_0030.05.kis  randm05.02.02.07.020_0030.01.kis  randm05.02.02.07.020_0030.04.kis  randm05.02.02.07.020_0030.05.kis  randm05.02.02.08.020_0030.03.kis  randm05.02.02.08.020_0030.05.kis  randm05.02.02.09.020_0030.01.kis  (+331 more)
cmake/Modules/: FindGMP.cmake  Findcvc4.cmake
docs/: BiermannMethod_8cpp.html  BiermannMethod_8cpp__incl.map  BiermannMethod_8cpp__incl.md5  BiermannMethod_8cpp_source.html  BiermannMethod_8h.html  BiermannMethod_8h__dep__incl.map  BiermannMethod_8h__dep__incl.md5  BiermannMethod_8h__incl.map  BiermannMethod_8h__incl.md5  BiermannMethod_8h_source.html  BinaryCNFMethod_8cpp.html  BinaryCNFMethod_8cpp__incl.map  BinaryCNFMethod_8cpp__incl.md5  BinaryCNFMethod_8cpp_source.html  BinaryCNFMethod_8h.html  BinaryCNFMethod_8h__dep__incl.map  BinaryCNFMethod_8h__dep__incl.md5  BinaryCNFMethod_8h__incl.map  BinaryCNFMethod_8h__incl.md5  BinaryCNFMethod_8h_source.html  BinaryNonCNFMethod_8cpp.html  BinaryNonCNFMethod_8cpp__incl.map  BinaryNonCNFMethod_8cpp__incl.md5  BinaryNonCNFMethod_8cpp_source.html  BinaryNonCNFMethod_8h.html  BinaryNonCNFMethod_8h__dep__incl.map  BinaryNonCNFMethod_8h__dep__incl.md5  BinaryNonCNFMethod_8h__incl.map  BinaryNonCNFMethod_8h__incl.md5  BinaryNonCNFMethod_8h_source.html  DFA_8h.html  DFA_8h__dep__incl.map  DFA_8h__dep__incl.md5  DFA_8h__incl.map  DFA_8h__incl.md5  DFA_8h_source.html  HeuleVerwerCNFMethod_8cpp.html  HeuleVerwerCNFMethod_8cpp__incl.map  HeuleVerwerCNFMethod_8cpp__incl.md5  HeuleVerwerCNFMethod_8cpp_source.html  (+289 more)
docs/html/: BiermannMethod_8cpp_source.html  BiermannMethod_8h__dep__incl.map  BiermannMethod_8h_source.html  BinaryCNFMethod_8cpp.html  BinaryCNFMethod_8cpp_source.html  BinaryCNFMethod_8h.html  BinaryCNFMethod_8h__dep__incl.map  BinaryCNFMethod_8h__incl.map  BinaryCNFMethod_8h_source.html  BinaryNonCNFMethod_8cpp.html  BinaryNonCNFMethod_8h__incl.map  HeuleVerwerCNFMethod_8cpp_source.html  (+129 more)
gsjj/: CMakeLists.txt
gsjj/include/: DFA.h  binary.h
gsjj/include/gsjj/: DFA.h
gsjj/include/gsjj/passive/: Method.h  MethodFactory.h  utils.h
gsjj/include/gsjj/passive/CNF/: BinaryCNFMethod.h  HeuleVerwerCNFMethod.h  SATCNFMethod.h  UnaryCNFMethod.h
gsjj/include/gsjj/passive/NonCNF/: BinaryNonCNFMethod.h  HeuleVerwerNonCNFMethod.h  SATNonCNFMethod.h  UnaryNonCNFMethod.h
gsjj/include/gsjj/passive/SMT/: BiermannMethod.h  NeiderJansenMethod.h  SMTMethod.h
gsjj/include/passive/: Method.h  MethodFactory.h  utils.h
gsjj/include/passive/CNF/: BinaryCNFMethod.h  HeuleVerwerCNFMethod.h  SATCNFMethod.h  UnaryCNFMethod.h
gsjj/include/passive/NonCNF/: BinaryNonCNFMethod.h  HeuleVerwerNonCNFMethod.h  SATNonCNFMethod.h  UnaryNonCNFMethod.h
gsjj/include/passive/SMT/: BiermannMethod.h  NeiderJansenMethod.h  SMTMethod.h
gsjj/lib/: CMakeLists.txt
gsjj/lib/MapleCOMSPS_LRB/core/: Solver.cc  Solver.h  SolverTypes.h
gsjj/lib/MapleCOMSPS_LRB/mtl/: Alg.h  Alloc.h  Heap.h  Map.h  Queue.h  Sort.h  Vec.h
gsjj/lib/MapleCOMSPS_LRB/simp/: SimpSolver.cc  SimpSolver.h
gsjj/lib/MapleCOMSPS_LRB/utils/: Options.h  System.h
gsjj/lib/bcsat/: .travis.yml  CMakeLists.txt  Doxyfile  README.txt  bc.cc  bc.hh  bc2cnf.cc  bc2edimacs.cc  bc2iscas89.cc  bcminisat.cc  bcminisat220_solve.cc  bcminisat_solve.cc  bczchaff.cc  bczchaff_solve.cc  defs.cc  defs.hh  edimacs2bc.cc  gate.cc  gate.hh  gatehash.cc  gatehash.hh  handle.cc  handle.hh  hashset.hh  heap.cc  heap.hh  lexer.lex  lexer11.lex  parser.y  parser11.y  timer.cc  timer.hh
gsjj/lib/limboole/: limboole.c  limboole.h
gsjj/lib/picosat/: picosat.c  picosat.h
gsjj/src/: binary.cpp
gsjj/src/passive/: Method.cpp  MethodFactory.cpp  utils.cpp
gsjj/src/passive/CNF/: BinaryCNFMethod.cpp  HeuleVerwerCNFMethod.cpp  SATCNFMethod.cpp  UnaryCNFMethod.cpp
gsjj/src/passive/NonCNF/: BinaryNonCNFMethod.cpp  HeuleVerwerNonCNFMethod.cpp  SATNonCNFMethod.cpp  UnaryNonCNFMethod.cpp
gsjj/src/passive/SMT/: BiermannMethod.cpp  NeiderJansenMethod.cpp  SMTMethod.cpp
plots/: biermann.time  full-1-10-100-6-14-10.time  full-1-6-100-6-14-10.time  full-7-8-100-6-14-10.time  full-8-10-100-6-14-10.time  full-9-9-100-6-14-10.time  full.time  heule.time  loop-free-04  loop-free-05  loop-free-06  loop-free-07  loop-free-08  loop-free-09  loop-free-10  loop-free-11  loop-free-12  loop-free-13  loop-free-14  loop-free.bash  loop-free_success.gnuplot  loopFreePreprocessing.py  loop_free_success.data  loop_free_success_total.data  neider.time  predefined  predefined.bash  random-1  random-10  random-2  random-3  random-4  random-5  random-6  random-7  random-8  random-9  random.bash  random.data  random.gnuplot  (+6 more)
tests/: CMakeLists.txt  binaryConversion.cpp  deterministicTests.cpp  utils.cpp  utils.h
(+509 files in other folders)
